[project]
name = "maven-test-picker"
version = "0.1.0"
description = "Interactive TUI to pick and run Maven tests à la carte"
authors = [
    {name = "Kaique Bahmad", email = "kaiquebahmadt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "javalang (>=0.13.0,<0.14.0)",
    "prompt_toolkit (>=3.0.43,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
